--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  希望参与编写？请访问 <a href="https://chocolateater.github.io/FD-Class/Joinus/">这个页面</a> 参与贡献。
+  希望参与编写？请访问 <a href="https://chocolateater.github.io/FD-Class/Joinus/">这个页面</a> 参与贡献。 （不感兴趣？你只需点击右侧的 "X" 横幅将会自动消失，并且在内容更改前不会再次出现）
 {% endblock %}
